<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hi.hbv601g.cocktailboi.MainActivity">

    <Button
        android:id="@+id/vodka_button"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_weight="1"
        android:onClick="showList"
        android:text="@string/vodka_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/rum_button"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_weight="1"
        android:onClick="showList"
        android:text="@string/rum_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/vodka_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gin_button"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="showList"
        android:text="@string/gin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vodka_button"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/other_button"
        android:layout_width="132dp"
        android:layout_height="117dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="showList"
        android:text="@string/brandy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/gin_button"
        app:layout_constraintTop_toBottomOf="@+id/rum_button" />

    <Button
        android:id="@+id/fav_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showFavorites"
        android:text="@string/fav_button"
        app:layout_constraintBaseline_toBaselineOf="parent"
        tools:layout_editor_absoluteY="403dp" />

</android.support.constraint.ConstraintLayout>
